@@ -1,5 +1,7 @@
 2007-04-16  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/lib/cairo/color.rb: added validation.
+
 	* misc/update-colors.rb: supported X11 color names.
 	* src/lib/cairo/colors.rb: updated.
 
